# exifsd

./: .gitmodules  Cargo.toml  README.md
examples/: inject.rs  read_exif.rs  rewrite.rs
src/: jpeg.rs  jpeg_data.rs  lib.rs  marked_data.rs  marker.rs  scan_segment.rs
